# Network-Security-System-MLOps-Project

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: main.yaml
final_model/: preprocessor.pkl
network_security/components/: data_ingestion.py  data_transformation.py  model_trainer.py
network_security/constant/training_pipeline/: __init__.py
network_security/entity/: config_entity.py
network_security/exception/: exception.py
network_security/pipeline/: training_pipeline.py
network_security/utils/main_utils/: utils.py
