[project]
name = "network-security-system-mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.6.15",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pymongo[srv]>=3.12.0",
    "python-dotenv>=1.1.0",
    "setuptools>=80.9.0",
]
